# NormalMapGenerator

./: .gitignore  BumpMapFromHeightMap.sln  CMakeLists.txt  MakeVS2013DevEnv.bat  MakeVS2017DevEnvX64Target.bat  README.md
BumpMapFromHeightMap/: BumpMapFromHeightMap.vcxproj  BumpMapFromHeightMap.vcxproj.filters  Math.cpp  Math.h  MathDataTypes.h  dataTypes.h  main.cpp
BumpMapFromHeightMap/Debug/: BumpMapFromHeightMap.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
BumpMapFromHeightMap/Release/: BumpMapFromHeightMap.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: BumpMapFromHeightMap.ilk
JoshMath/: CMakeLists.txt  JoshMath.cpp  JoshMath.h  MathTypes.h
Qt_UiProject/MapGeneratorWindow/: MapGeneratorWindow.pro  main.cpp  mapgeneratorwindow.cpp  mapgeneratorwindow.h  mapgeneratorwindow.ui
source/: CMakeLists.txt  main.cpp  mapgeneratorwindow.cpp  mapgeneratorwindow.h  mapgeneratorwindow.ui
